--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
 
     <script type="module" src="/main.js"></script>
     <script type="module" src="./test.js"></script>
+    <script type="module" src="./animation.js"></script>
   </body>
 </html>
