--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div id="app"></div>
 
     <script type="module" src="/main.js"></script>
+    <script type="module" src="./behavior.js"></script>
     <script type="module" src="./test.js"></script>
     <script type="module" src="./animation.js"></script>
   </body>
