--- a/index.html
+++ b/index.html
@@ -2,17 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/giga-chad.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Cute Chat</title>
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
     <div id="app"></div>
 
     <script type="module" src="/main.js"></script>
-    <script type="module" src="./behavior.js"></script>
-    <script type="module" src="./test.js"></script>
-    <script type="module" src="./animation.js"></script>
+    
   </body>
 </html>
